# cabal2ninja

./: README.md  cabal2ninja.cabal  release.nix  shell.nix
executables/cabal2ninja/: Main.hs
executables/ghc-scatter/: Main.hs
nix/: cabal2ninja.nix
tests/: Main.hs
